tests/snapshots/run_wpt_conformance__trtx_reshape__unsqueeze__float32_0D_tensor_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (unsqueeze) float32 0D tensor to 4D",
    "trtx",
    "PASS",
)
