tests/snapshots/run_wpt_conformance__trtx_reshape__unsqueeze__float32_1D_tensor_by_adding_2nd_and_3rd_dimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (unsqueeze) float32 1D tensor by adding 2nd and 3rd dimensions",
    "trtx",
    "PASS",
)
